# debshrew

./: .clinerules  .gitignore  Cargo.toml  README.md
alkanes-transform/: Cargo.toml
alkanes-transform/src/: lib.rs
debshrew/: Cargo.toml
debshrew-runtime/: Cargo.toml
debshrew-runtime/src/: error.rs  exports.rs  host.rs  imports.rs  lib.rs  transform.rs  wasm.rs
debshrew-support/: Cargo.toml
debshrew-support/src/: error.rs  lib.rs  serialization.rs  types.rs  utils.rs
debshrew/src/: block.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  synchronizer.rs
debshrew/src/sink/: mod.rs
docs/: README.md  architecture.md  build.sh  cdc-concepts.md  configuration.md  index.md  installation.md  metashrew-integration.md  mkdocs.yml  quickstart.md  wasm-transform-guide.md
docs/api/: debshrew-runtime.md  debshrew-support.md  debshrew.md
examples/simple-transform/: Cargo.toml
examples/simple-transform/src/: lib.rs
memory-bank/: activeContext.md  cdc-concepts.md  metashrew-integration.md  productContext.md  progress.md  projectbrief.md  reference-summary.md  systemPatterns.md  techContext.md  wasm-transform-guide.md
