[workspace]
members = [ "alkanes-transform",
    "debshrew",
    "debshrew-runtime",
    "debshrew-support",
    "examples/simple-transform",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Debshrew Team"]
description = "A framework for building deterministic CDC streams from Bitcoin metaprotocol state"
repository = "https://github.com/example/debshrew"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Common dependencies
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
wasmtime = "12.0"
bincode = "1.3"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
url = "2.4"
regex = "1.9"
lazy_static = "1.4"
once_cell = "1.18"
wasm-bindgen = "0.2"
wat = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
rdkafka = "0.34"
postgres = "0.19"

# Testing dependencies
mockall = "0.11"
proptest = "1.2"
tempfile = "3.8"
test-log = "0.2"
wiremock = "0.5"
