[package]
name = "debshrew-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "WASM host interface and transform traits for debshrew"
repository.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
wasmtime.workspace = true
bincode.workspace = true
hex.workspace = true

# Internal dependencies
debshrew-support = { path = "../debshrew-support" }

# External dependencies
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.18"
wasm-bindgen = "0.2"
wat = "1.0"

[features]
default = []
testing = []

[dev-dependencies]
mockall.workspace = true
proptest.workspace = true
tempfile.workspace = true
test-log = "0.2"