[package]
name = "debshrew-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
debshrew-support = { path = "../debshrew-support" }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
protobuf = "3.2"
wat = { version = "1.0", optional = true }
wasmtime = { version = "12.0", optional = true }

[features]
default = ["host"]
host = ["wasmtime"]
test-utils = ["wat", "host"]
testing = ["test-utils"]  # Alias for backward compatibility

[dev-dependencies]
wat = "1.0"