[package]
name = "debshrew-support"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Common utilities and shared code for debshrew"
repository.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
hex.workspace = true

# External dependencies
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
url = "2.4"
regex = "1.9"
lazy_static = "1.4"

[dev-dependencies]
mockall.workspace = true
proptest.workspace = true
test-log = "0.2"