[package]
name = "debshrew"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
wasmtime.workspace = true
bincode.workspace = true
hex.workspace = true
rdkafka.workspace = true
postgres.workspace = true

# Internal dependencies
debshrew-runtime = { path = "../debshrew-runtime", features = ["testing"] }
debshrew-support = { path = "../debshrew-support" }

# External dependencies
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

[dev-dependencies]
mockall.workspace = true
proptest.workspace = true
tempfile.workspace = true
test-log = "0.2"
wiremock = "0.5"